it actually seems to work (only the pattern matching does not take into account the required: false)
